Fix T43862: Knife fails with concave ngon